--- a/app/src/main/res/layout/colorpuzzle_layout.xml
+++ b/app/src/main/res/layout/colorpuzzle_layout.xml
@@ -48,20 +48,44 @@
             />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/difficultyLAV"
+<!--    <ImageView-->
+<!--        android:id="@+id/difficultyLAV"-->
+<!--        android:background="@drawable/circle_background"-->
+<!--        android:layout_width="32dp"-->
+<!--        android:layout_height="32dp"-->
+<!--        android:layout_toStartOf="@+id/settingIconIV"-->
+<!--        android:layout_alignBottom="@+id/settingIconIV"-->
+<!--        android:layout_marginEnd="30dp"-->
+<!--        android:gravity="center"-->
+<!--        android:paddingHorizontal="3dp"-->
+<!--        android:paddingBottom="1dp"-->
+<!--        android:stateListAnimator="@animator/pulse_animation"-->
+<!--        android:onClick="handleDifficultyButton"-->
+<!--        android:src="@drawable/difficulty2"/>-->
+
+
+    <View
         android:background="@drawable/circle_background"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_toStartOf="@+id/settingIconIV"
         android:layout_alignBottom="@+id/settingIconIV"
+        android:layout_marginEnd="30dp"/>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/difficultyLAV"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_toStartOf="@+id/settingIconIV"
+        android:layout_alignBottom="@+id/settingIconIV"
         android:layout_marginEnd="30dp"
-        android:gravity="center"
-        android:paddingHorizontal="3dp"
-        android:paddingBottom="1dp"
+        android:scaleX="0.95"
+        android:scaleY="1"
+        android:paddingBottom="2dp"
         android:stateListAnimator="@animator/pulse_animation"
         android:onClick="handleDifficultyButton"
-        android:src="@drawable/difficulty2"/>
+        app:lottie_rawRes="@raw/lottie_difficulty"/>
+
 
     <!-- Strike AnimationView -->
     <com.airbnb.lottie.LottieAnimationView
@@ -101,7 +125,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:rotation="270"
-        app:lottie_speed="2"
+        app:lottie_speed="1.5"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
         app:lottie_rawRes="@raw/lottie_contrast"
         android:visibility="gone"/>
 
@@ -365,26 +391,7 @@
         android:onClick="handleResetClick"
         android:stateListAnimator="@animator/pulse_animation" />
 
-    <!-- Back ImageView -->
-    <ImageView
-        android:id="@+id/backIconIV"
-        style="@style/BackImageView"
-        android:onClick="goBack"
-        android:contentDescription="@string/image_description"/>
-
-    <!-- Home ImageView -->
-    <ImageView
-        android:id="@+id/homeIconIV"
-        style="@style/HomeImageView"
-        android:onClick="goToHome"
-        android:contentDescription="@string/image_description"/>
-
-    <!-- Setting ImageView -->
-    <ImageView
-        android:id="@+id/settingIconIV"
-        style="@style/SettingImageView"
-        android:onClick="goToSetting"
-        android:contentDescription="@string/image_description"/>
+    <include layout="@layout/navigation_layout" />
 
     <include
         android:id="@+id/DifficultyMenu"
