--- a/app/src/main/res/layout/setting_layout.xml
+++ b/app/src/main/res/layout/setting_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
@@ -28,7 +27,12 @@
     <!-- Back ImageView -->
     <ImageView
         android:id="@+id/backIconIV"
-        style="@style/BackImageView"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:stateListAnimator="@animator/pulse_animation"
+        android:src="@drawable/back_icon"
         android:onClick="goBack"
         android:contentDescription="@string/image_description" />
 
