--- a/app/src/main/res/layout/wordle_layout.xml
+++ b/app/src/main/res/layout/wordle_layout.xml
@@ -492,26 +492,7 @@
         app:lottie_rawRes="@raw/lottie_coin_blast"
         android:visibility="gone"/>
 
-    <!-- Back ImageView -->
-    <ImageView
-        android:id="@+id/backIconIV"
-        style="@style/BackImageView"
-        android:onClick="goBack"
-        android:contentDescription="@string/image_description" />
-
-    <!-- Home ImageView -->
-    <ImageView
-        android:id="@+id/homeIconIV"
-        style="@style/HomeImageView"
-        android:onClick="goToHome"
-        android:contentDescription="@string/image_description" />
-
-    <!-- Setting ImageView -->
-    <ImageView
-        android:id="@+id/settingIconIV"
-        style="@style/SettingImageView"
-        android:onClick="goToSetting"
-        android:contentDescription="@string/image_description" />
+    <include layout="@layout/navigation_layout"/>
 
     <!-- Streak TextView -->
     <RelativeLayout
@@ -654,50 +635,10 @@
 
     </RelativeLayout>
 
-    <!-- Currency RelativeLayout -->
-    <RelativeLayout
-        android:id="@+id/currencyRL"
-        android:layout_width="80dp"
-        android:layout_height="30dp"
-        android:layout_toEndOf="@id/backIconIV"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="30dp"
-        android:onClick="onCurrencyClick"
-        android:background="@drawable/border_background"
-        android:stateListAnimator="@animator/pulse_animation" >
-
-
-        <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="-15dp"
-            android:padding="4dp"
-            android:background="@drawable/border_background"
-            android:src="@drawable/coin"
-            android:contentDescription="@string/image_description" />
-
-        <TextView
-            android:id="@+id/currencyCountTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:textSize="15sp"
-            android:textColor="@color/beige"
-            android:textAppearance="@style/default_font"/>
-
-        <ImageView
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:src="@drawable/plus"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="-5dp"
-            android:layout_marginEnd="-5dp"
-            android:contentDescription="@string/image_description" />
-
-    </RelativeLayout>
+    <!-- Shop Button RelativeLayout -->
+    <include
+        android:id="@+id/ShopButton"
+        layout="@layout/shop_button_layout"/>
 
     <!-- TargetWord TextView -->
     <TextView
