--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -1,8 +1,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#333333"/>
-            <corners android:radius="20dp"/>
+            <solid android:color="@color/charcoal"/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
 </selector>
