--- a/app/src/main/res/layout/colorpuzzle_layout.xml
+++ b/app/src/main/res/layout/colorpuzzle_layout.xml
@@ -1,7 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     android:background="@color/background">
 
     <!-- Grid LL -->
@@ -48,22 +50,6 @@
             />
     </LinearLayout>
 
-<!--    <ImageView-->
-<!--        android:id="@+id/difficultyLAV"-->
-<!--        android:background="@drawable/circle_background"-->
-<!--        android:layout_width="32dp"-->
-<!--        android:layout_height="32dp"-->
-<!--        android:layout_toStartOf="@+id/settingIconIV"-->
-<!--        android:layout_alignBottom="@+id/settingIconIV"-->
-<!--        android:layout_marginEnd="30dp"-->
-<!--        android:gravity="center"-->
-<!--        android:paddingHorizontal="3dp"-->
-<!--        android:paddingBottom="1dp"-->
-<!--        android:stateListAnimator="@animator/pulse_animation"-->
-<!--        android:onClick="handleDifficultyButton"-->
-<!--        android:src="@drawable/difficulty2"/>-->
-
-
     <View
         android:background="@drawable/circle_background"
         android:layout_width="32dp"
@@ -85,7 +71,6 @@
         android:stateListAnimator="@animator/pulse_animation"
         android:onClick="handleDifficultyButton"
         app:lottie_rawRes="@raw/lottie_difficulty"/>
-
 
     <!-- Strike AnimationView -->
     <com.airbnb.lottie.LottieAnimationView
@@ -307,63 +292,67 @@
 
     </LinearLayout>
 
-    <!-- Shadow  -->
-    <View
-        android:id="@+id/shadowV"
-        style="@style/ShadowLayout"/>
+    <!-- Shop Button RelativeLayout -->
+    <include
+        android:id="@+id/ShopButton"
+        layout="@layout/shop_button_layout"/>
 
-    <!-- MidGame Leave Warning RL -->
+    <!-- Shadow Layout -->
+    <include
+        android:id="@+id/Shadow"
+        layout="@layout/shadow_layout"/>
+
+    <!-- Leave RelativeLayout -->
     <RelativeLayout
         android:id="@+id/leaveRL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
         android:layout_centerInParent="true"
-        android:padding="15dp"
+        android:padding="20dp"
         android:background="@drawable/popup_background"
         android:visibility="gone">
 
         <TextView
+            android:id="@+id/midGameExitTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
             android:text="@string/are_you_sure"
-            android:textSize="30sp"
+            android:textSize="25sp"
+            android:textColor="@color/beige"
             android:textAppearance="@style/default_font"
-            android:textColor="@color/beige" />
+            android:gravity="center"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="50dp"
-            android:orientation="horizontal" >
+        <Button
+            android:id="@+id/yesExitB"
+            android:tag="yes"
+            android:background="@drawable/ui_background"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:text="@string/yes"
+            android:textSize="20sp"
+            android:textColor="@color/beige"
+            android:textAppearance="@style/default_font"
+            android:onClick="handleExitButtons"
+            android:stateListAnimator="@animator/pulse_animation" />
 
-            <Button
-                android:id="@+id/noExitB"
-                android:tag="no"
-                android:background="@drawable/exit_no"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:text="@string/no"
-                android:textSize="25sp"
-                android:textColor="@color/beige"
-                android:textAppearance="@style/default_font"
-                android:onClick="handleExitButtons" />
+        <Button
+            android:id="@+id/noExitB"
+            android:tag="no"
+            android:background="@drawable/exit_no"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:text="@string/no"
+            android:textSize="20sp"
+            android:textColor="@color/beige"
+            android:textAppearance="@style/default_font"
+            android:onClick="handleExitButtons"
+            android:stateListAnimator="@animator/pulse_animation" />
 
-            <Button
-                android:id="@+id/yesExitB"
-                android:tag="yes"
-                android:background="@drawable/ui_background"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="10dp"
-                android:text="@string/yes"
-                android:textSize="25sp"
-                android:textColor="@color/beige"
-                android:textAppearance="@style/default_font"
-                android:onClick="handleExitButtons" />
-
-        </LinearLayout>
 
     </RelativeLayout>
 
@@ -391,7 +380,14 @@
         android:onClick="handleResetClick"
         android:stateListAnimator="@animator/pulse_animation" />
 
-    <include layout="@layout/navigation_layout" />
+    <!-- Shop RelativeLayout -->
+    <include
+        android:id="@+id/Shop"
+        layout="@layout/shop_layout"/>
+
+    <include
+        android:id="@+id/Navigation"
+        layout="@layout/navigation_layout" />
 
     <include
         android:id="@+id/DifficultyMenu"
