--- a/app/src/main/res/layout/shop_button_layout.xml
+++ b/app/src/main/res/layout/shop_button_layout.xml
@@ -1,23 +1,22 @@
-<!-- Currency RelativeLayout -->
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/currencyRL"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ShopButtonLayout"
     android:layout_width="80dp"
-    android:layout_height="30dp"
-    android:layout_toEndOf="@id/backIconIV"
-    android:layout_marginTop="15dp"
-    android:layout_marginStart="30dp"
+    android:layout_height="32dp"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginTop="16dp"
+    android:layout_marginEnd="16dp"
     android:onClick="handleShopButtonClick"
     android:background="@drawable/border_background"
-    android:stateListAnimator="@animator/pulse_animation" >
+    android:stateListAnimator="@animator/pulse_animation">
 
 
     <ImageView
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="-15dp"
-        android:padding="4dp"
-        android:background="@drawable/border_background"
+        android:padding="5dp"
+        android:background="@drawable/background_border_circle"
         android:src="@drawable/coin"
         android:contentDescription="@string/image_description" />
 
@@ -28,7 +27,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="10dp"
-        android:textSize="15sp"
+        android:textSize="13sp"
         android:textColor="@color/beige"
         android:textAppearance="@style/default_font"/>
 
