--- a/app/src/main/res/layout/tictactoeai_layout.xml
+++ b/app/src/main/res/layout/tictactoeai_layout.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     android:background="@color/background">
 
     <RelativeLayout
@@ -201,11 +203,9 @@
 
     </GridLayout>
 
-    <include layout="@layout/navigation_layout"/>
-
     <!--Difficulty RelativeLayout-->
     <RelativeLayout
-        android:id="@+id/difficultyRL"
+        android:id="@+id/ColorPuzzleDifficultyLayout"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -277,10 +277,25 @@
         app:lottie_rawRes="@raw/lottie_fireworks"
         app:lottie_loop="true"/>
 
-    <!--Shadow View-->
-    <View
-        android:id="@+id/shadowV"
-        style="@style/ShadowLayout"/>
+    <!-- Shop Button Layout -->
+    <include
+        android:id="@+id/ShopButton"
+        layout="@layout/shop_button_layout"/>
+
+    <!-- Shadow Layout -->
+    <include
+        android:id="@+id/Shadow"
+        layout="@layout/shadow_layout"/>
+
+    <!-- Navigation Layout -->
+    <include
+        android:id="@+id/Navigation"
+        layout="@layout/navigation_layout"/>
+
+    <!-- Shop Layout -->
+    <include
+        android:id="@+id/Shop"
+        layout="@layout/shop_layout"/>
 
     <!--GameDraw ImageView-->
     <ImageView
