--- a/app/src/main/res/drawable/exit_no.xml
+++ b/app/src/main/res/drawable/exit_no.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="@color/green"/>
+        <solid android:color="@color/light_green"/>
         <corners android:radius="10dp"/>
     </shape>
 </item>
