--- a/app/src/main/res/drawable/selection.xml
+++ b/app/src/main/res/drawable/selection.xml
@@ -2,7 +2,7 @@
     <!-- Active state -->
     <item android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/green"/>
+            <solid android:color="@color/light_green"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
