--- a/app/src/main/res/layout/colorpuzzle_difficulty_layout.xml
+++ b/app/src/main/res/layout/colorpuzzle_difficulty_layout.xml
@@ -6,7 +6,8 @@
     android:layout_centerInParent="true"
     android:gravity="center"
     android:layout_margin="24dp"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:visibility="gone">
 
     <RelativeLayout
         android:layout_width="wrap_content"
