--- a/app/src/main/res/layout/dotandboxes_layout.xml
+++ b/app/src/main/res/layout/dotandboxes_layout.xml
@@ -1,9 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:clipChildren="false"
-    android:clipToPadding="false"
-    android:background="@color/background">
+    android:clipToPadding="false">
 
 
     <!-- Custom Game View: Centered in parent -->
@@ -188,7 +188,8 @@
         android:layout_margin="24dp"
         android:padding="16dp"
         android:clipToPadding="false"
-        android:clipChildren="false">
+        android:clipChildren="false"
+        android:visibility="gone">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -241,7 +242,6 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:orientation="horizontal"
                 android:stateListAnimator="@animator/pulse_animation">
 
@@ -438,8 +438,8 @@
                 android:visibility="gone">
 
                 <TextView
-                    android:id="@+id/easyTV"
-                    android:tag="1"
+                    android:id="@+id/casualDifficultyTV"
+                    android:tag="casual"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minWidth="80dp"
@@ -447,7 +447,7 @@
                     android:gravity="center"
                     android:background="@drawable/selection"
                     android:padding="10dp"
-                    android:text="@string/easy"
+                    android:text="Casual"
                     android:textSize="18sp"
                     android:textColor="@color/beige"
                     android:textAppearance="@style/default_font"
@@ -456,8 +456,8 @@
                     android:onClick="handleDifficultyButtons"/>
 
                 <TextView
-                    android:id="@+id/mediumTV"
-                    android:tag="2"
+                    android:id="@+id/tacticalDifficultyTV"
+                    android:tag="tactical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
@@ -466,25 +466,7 @@
                     android:gravity="center"
                     android:background="@drawable/selection"
                     android:padding="10dp"
-                    android:text="@string/medium"
-                    android:textSize="18sp"
-                    android:textColor="@color/beige"
-                    android:textAppearance="@style/default_font"
-                    android:layout_gravity="center"
-                    android:stateListAnimator="@animator/pulse_animation"
-                    android:onClick="handleDifficultyButtons"/>
-
-                <TextView
-                    android:id="@+id/hardTV"
-                    android:tag="3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minWidth="80dp"
-                    android:minHeight="50dp"
-                    android:gravity="center"
-                    android:background="@drawable/selection"
-                    android:padding="10dp"
-                    android:text="@string/hard"
+                    android:text="Tactical"
                     android:textSize="18sp"
                     android:textColor="@color/beige"
                     android:textAppearance="@style/default_font"
@@ -499,7 +481,5 @@
 
 
     </RelativeLayout>
-
-
 
 </RelativeLayout>
